# master_meta_hackathon_new

./: Dockerfile  README.md  ROUND1_SUBMISSION.md  docker-compose.deploy.yml  inference.py  openenv.yaml  pyproject.toml  server.ps1
api/: main.py
scripts/: deploy_hf_space.ps1  generate_ui_diagrams.py  pre_submission_smoke.ps1  validate-submission.sh  validate_inference_log.py
server/: app.py
ui/: app.js  logs.js
